--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>OnlyKos</title>
-    <link href="./FE/src/css/style.css" rel="stylesheet">
+    <link href="/FE/css/style.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 
@@ -24,7 +24,7 @@
 
     <section id="home">
         <div class="image-overlay">
-            <img src="./FE/img/kosan.jpg" alt="Welcome to OnlyKost">
+            <img src="/FE/img/kosan.jpg" alt="Welcome to OnlyKost">
             <div class="text-overlay">
                 <h2>Welcome to OnlyKos</h2>
                 <p>Hanya Sebuah Website Kos Yang Membantu Anda Mencari Kos Idaman</p>
@@ -40,31 +40,31 @@
                 <i class="fa-solid fa-arrow-left arrow-left"></i>
                 <div class="team-item rounded overflow-hidden">
                     <div class="position-relative">
-                        <img class="img-fluid w-100" src="./FE/img/Bandung.jpg" onclick="goToKota()" alt="">
+                        <img class="img-fluid w-100" src="/FE/img/Bandung.jpg" onclick="goToKota()" alt="">
                         <h4 class="text-uppercase">Bandung</h4>
                     </div>
                 </div>
                 <div class="team-item rounded overflow-hidden">
                     <div class="position-relative">
-                        <img class="img-fluid w-100" src="./FE/img/Monas.png" onclick="goToKota()" alt="">
+                        <img class="img-fluid w-100" src="/FE/img/Monas.png" onclick="goToKota()" alt="">
                         <h4 class="text-uppercase">Jakarta</h4>
                     </div>
                 </div>
                 <div class="team-item rounded overflow-hidden">
                     <div class="position-relative">
-                        <img class="img-fluid w-100" src="./FE/img/Semarang.png" onclick="goToKota()" alt="">
+                        <img class="img-fluid w-100" src="/FE/img/Semarang.png" onclick="goToKota()" alt="">
                         <h4 class="text-uppercase">Semarang</h4>
                     </div>
                 </div>
                 <div class="team-item rounded overflow-hidden">
                     <div class="position-relative">
-                        <img class="img-fluid w-100" src="./FE/img/Yogya.png" onclick="goToKota()" alt="">
+                        <img class="img-fluid w-100" src="/FE/img/Yogya.png" onclick="goToKota()" alt="">
                         <h4 class="text-uppercase">Yogyakarya</h4>
                     </div>
                 </div>
                 <div class="team-item rounded overflow-hidden">
                     <div class="position-relative">
-                        <img class="img-fluid w-100" src="./FE/img/Surabaya.png" onclick="goToKota()" alt="">
+                        <img class="img-fluid w-100" src="/FE/img/Surabaya.png" onclick="goToKota()" alt="">
                         <h4 class="text-uppercase">Surabaya</h4>
                     </div>
                 </div>
