--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>OnlyKos</title>
-    <link href="/FE/css/style.css" rel="stylesheet">
+    <link href="./src/css/style.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 
@@ -24,7 +24,7 @@
 
     <section id="home">
         <div class="image-overlay">
-            <img src="/FE/img/kosan.jpg" alt="Welcome to OnlyKost">
+            <img src="./img/kosan.jpg" alt="Welcome to OnlyKost">
             <div class="text-overlay">
                 <h2>Welcome to OnlyKos</h2>
                 <p>Hanya Sebuah Website Kos Yang Membantu Anda Mencari Kos Idaman</p>
