--- a/index.html
+++ b/index.html
@@ -40,31 +40,31 @@
                 <i class="fa-solid fa-arrow-left arrow-left"></i>
                 <div class="team-item rounded overflow-hidden">
                     <div class="position-relative">
-                        <img class="img-fluid w-100" src="/FE/img/Bandung.jpg" onclick="goToKota()" alt="">
+                        <img class="img-fluid w-100" src="./img/Bandung.jpg" onclick="goToKota()" alt="">
                         <h4 class="text-uppercase">Bandung</h4>
                     </div>
                 </div>
                 <div class="team-item rounded overflow-hidden">
                     <div class="position-relative">
-                        <img class="img-fluid w-100" src="/FE/img/Monas.png" onclick="goToKota()" alt="">
+                        <img class="img-fluid w-100" src="./img/Monas.png" onclick="goToKota()" alt="">
                         <h4 class="text-uppercase">Jakarta</h4>
                     </div>
                 </div>
                 <div class="team-item rounded overflow-hidden">
                     <div class="position-relative">
-                        <img class="img-fluid w-100" src="/FE/img/Semarang.png" onclick="goToKota()" alt="">
+                        <img class="img-fluid w-100" src="./img/Semarang.png" onclick="goToKota()" alt="">
                         <h4 class="text-uppercase">Semarang</h4>
                     </div>
                 </div>
                 <div class="team-item rounded overflow-hidden">
                     <div class="position-relative">
-                        <img class="img-fluid w-100" src="/FE/img/Yogya.png" onclick="goToKota()" alt="">
+                        <img class="img-fluid w-100" src="./img/Yogya.png" onclick="goToKota()" alt="">
                         <h4 class="text-uppercase">Yogyakarya</h4>
                     </div>
                 </div>
                 <div class="team-item rounded overflow-hidden">
                     <div class="position-relative">
-                        <img class="img-fluid w-100" src="/FE/img/Surabaya.png" onclick="goToKota()" alt="">
+                        <img class="img-fluid w-100" src="./img/Surabaya.png" onclick="goToKota()" alt="">
                         <h4 class="text-uppercase">Surabaya</h4>
                     </div>
                 </div>
@@ -85,7 +85,7 @@
         </div>
     </footer>
 
-    <script src="./FE/src/js/script.js"></script>
+    <script src="./src/js/script.js"></script>
 </body>
 
 </html>
