--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                 </div>
                 <div class="team-item rounded overflow-hidden">
                     <div class="position-relative">
-                        <img class="img-fluid w-100" src="./FE/img/Monas.png" onclick="goToKota()" alt="">
+                        <img class="img-fluid w-100" src="./img/Monas.png" onclick="goToKota()" alt="">
                         <h4 class="text-uppercase">Jakarta</h4>
                     </div>
                 </div>
