--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
     <header>
-        <h1>OnlyKost</h1>
+        <img src="./img/OK.png" alt="OnlyKost Logo">
         <nav class="nav">
             <div class="nav-box">
                 <a href="#home">Beranda</a>
@@ -19,8 +19,12 @@
             <div class="nav-box">
                 <a href="#Kota">Kota Unggulan</a>
             </div>
-        </nav>
+            <div class="nav-box">
+                <a href="#About" onclick="goToAbout()">About us</a>
+            </div>
+        </nav>        
     </header>
+    
 
     <section id="home">
         <div class="image-overlay">
